--- a/index.html
+++ b/index.html
@@ -14,5 +14,16 @@
 </head>
 <body>
   
+    <div id='buttonContainer' class="btn btn-primary">Primary</div>
+
+    <nav class="navbar navbar-light bg-light">
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" id='searchBar' type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" id='searchButton' type="submit">Search</button>
+          <div class="box"></div>
+        </form>
+      </nav>
 </body>
 </html>
+
+
