BUtton functionality was added! You can now create your own buttons, but for some reason the path to the giphy api is completely non-functioning.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,9 +18,12 @@
 
     <nav class="navbar navbar-light bg-light">
         <form class="form-inline">
-          <input class="form-control mr-sm-2" id='searchBar' type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" id='searchButton' type="submit">Search</button>
-          <div class="box"></div>
+          <input class="form-control mr-sm-2"  type="search" placeholder="Search" aria-label="Search" id='searchBar'>
+          <button class="btn btn-outline-success my-2 my-sm-0"  type="button" id='searchButton'>Search</button>
+          <div class="box">
+
+            <p>wooo</p>
+            <div class='potato'></div>
         </form>
       </nav>
 </body>
