--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
 </head>
 <body>
-  
+  <div class="container">
     <div id='buttonContainer' class="btn btn-primary">Primary</div>
 
     <nav class="navbar navbar-light bg-light">
@@ -23,9 +23,10 @@
           <div class="box">
 
             <p>wooo</p>
-            <div class='potato'></div>
+            <div class='display'>h</div>
         </form>
       </nav>
+    </div>
 </body>
 </html>
 
