Final Working version, there's a special google chrome attribute that wont let the gifs actually load in for some reason.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 <body>
   <div class="container">
-    <div id='buttonContainer' class="btn btn-primary">Primary</div>
+    <h1>Pick your cafe selection!</h1>
+    <div id='buttonContainer' class="btn btn-primary"></div>
+    
 
     <nav class="navbar navbar-light bg-light">
         <form class="form-inline">
@@ -22,8 +24,8 @@
           <button class="btn btn-outline-success my-2 my-sm-0"  type="button" id='searchButton'>Search</button>
           <div class="box">
 
-            <p>wooo</p>
-            <div class='display'>h</div>
+            <p></p>
+            <div class='display'></div>
         </form>
       </nav>
     </div>
